UPD: For Post and Image added DAL + DTO + Repository architecture DB