@@ -1,79 +1,60 @@
+// src/main/java/ru/yandex/practicum/catsgram/service/PostService.java
 package ru.yandex.practicum.catsgram.service;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import ru.yandex.practicum.catsgram.dal.PostRepository;
 import ru.yandex.practicum.catsgram.exception.ConditionsNotMetException;
 import ru.yandex.practicum.catsgram.exception.NotFoundException;
 import ru.yandex.practicum.catsgram.model.Post;
 import ru.yandex.practicum.catsgram.model.SortOrder;
-import ru.yandex.practicum.catsgram.model.User;
 
-import java.time.Instant;
-import java.util.*;
+import java.util.Collection;
+import java.util.Optional;
 
-// Указываем, что класс PostService - является бином и его
-// нужно добавить в контекст приложения
 @Service
+@RequiredArgsConstructor
 public class PostService {
-    private final Map<Long, Post> posts = new HashMap<>();
+    private final PostRepository postRepository;
     private final UserService userService;
 
-    private final Comparator<Post> postDateComparator = Comparator.comparing(Post::getPostDate);
-
-    @Autowired
-    public PostService(UserService userService) {
-        this.userService = userService;
-    }
-
     public Collection<Post> findAll(SortOrder sort, int from, int size) {
-        return posts.values().stream()
-                .sorted(sort.equals(SortOrder.ASCENDING) ? postDateComparator : postDateComparator.reversed())
+        return postRepository.findAll().stream()
+                .sorted(sort.equals(SortOrder.ASCENDING) ?
+                        (p1, p2) -> p1.getPostDate().compareTo(p2.getPostDate()) :
+                        (p1, p2) -> p2.getPostDate().compareTo(p1.getPostDate()))
                 .skip(from)
                 .limit(size)
                 .toList();
     }
 
     public Optional<Post> findById(long postId) {
-        return Optional.ofNullable(posts.get(postId));
+        return postRepository.findById(postId);
     }
 
-   /* public Post create(Post post) {
-        if (post.getDescription() == null || post.getDescription().isBlank()) {
+    public Post create(Post post) {
+        if (post.getDescription() == null || post.getDescription().trim().isEmpty()) {
             throw new ConditionsNotMetException("Описание не может быть пустым");
         }
-
-        Optional<User> authorOpt = userService.findUserById(post.getAuthorId());
-        if (authorOpt.isEmpty()) {
+        try {
+            userService.getUserById(post.getAuthorId());
+        } catch (NotFoundException e) {
             throw new ConditionsNotMetException("Автор с id = " + post.getAuthorId() + " не найден");
         }
-
-        post.setId(getNextId());
-        post.setPostDate(Instant.now());
-        posts.put(post.getId(), post);
-        return post;
-    }*/
+        post.setPostDate(java.time.Instant.now());
+        return postRepository.save(post);
+    }
 
     public Post update(Post newPost) {
         if (newPost.getId() == null) {
             throw new ConditionsNotMetException("Id должен быть указан");
         }
-        if (posts.containsKey(newPost.getId())) {
-            Post oldPost = posts.get(newPost.getId());
-            if (newPost.getDescription() == null || newPost.getDescription().isBlank()) {
-                throw new ConditionsNotMetException("Описание не может быть пустым");
-            }
-            oldPost.setDescription(newPost.getDescription());
-            return oldPost;
+        Post existing = postRepository.findById(newPost.getId())
+                .orElseThrow(() -> new NotFoundException("Пост с id = " + newPost.getId() + " не найден"));
+        if (newPost.getDescription() == null || newPost.getDescription().trim().isEmpty()) {
+            throw new ConditionsNotMetException("Описание не может быть пустым");
         }
-        throw new NotFoundException("Пост с id = " + newPost.getId() + " не найден");
-    }
-
-    private long getNextId() {
-        long currentMaxId = posts.keySet()
-                .stream()
-                .mapToLong(id -> id)
-                .max()
-                .orElse(0);
-        return ++currentMaxId;
+        existing.setDescription(newPost.getDescription());
+        return postRepository.update(existing);
     }
 }
